--- a/Railways/src/main/webapp/WEB-INF/web.xml
+++ b/Railways/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>Railways</display-name>
   <welcome-file-list>
     <welcome-file>homepage.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>output.jsp</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.jsp</welcome-file>
