--- a/Railways/src/main/webapp/WEB-INF/web.xml
+++ b/Railways/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,10 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>Railways</display-name>
   <welcome-file-list>
-    <welcome-file>homepage.html</welcome-file>
-    <welcome-file>output.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
+    <welcome-file></welcome-file>
+    <welcome-file></welcome-file>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>user.html</welcome-file>
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
